--- a/Modeller/.project
+++ b/Modeller/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Proxy</name>
+	<name>Modeller</name>
 	<comment></comment>
 	<projects>
 	</projects>
