--- a/CRMAdapter/pom.xml
+++ b/CRMAdapter/pom.xml
@@ -21,8 +21,8 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
       <version>${httpclient.version}</version>
     </dependency>
     <dependency>
